--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1146,29 +1146,32 @@ SequencerWidgets.TimeStamp=2022.10.25-09.56.58
 SequencerWidgets.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/UI/Main_Menu/FridgeBP.FridgeBP
+OpenAssetsAtExit=/Game/UI/Main_Menu/fridge_menu.fridge_menu
+OpenAssetsAtExit=/Game/UI/Main_Menu/Settings_Menu.Settings_Menu
 
 [ContentBrowserRecent]
-MRUItem0=/Game/UI/Main_Menu/fridge_menu
-MRUItem1=/Game/UI/Main_Menu/FridgeBP
-MRUItem2=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem3=/Game/ThirdPerson/Maps/title_screen
-MRUItem4=/Game/Animations/Jelly/materials/Jelly/Red_Jelly
-MRUItem5=/Game/UI/Main_Menu/X_Prompt
-MRUItem6=/Game/UI/Main_Menu/Fridge
-MRUItem7=/Game/Assets/Title_Screen/Ramp
-MRUItem8=/Game/Assets/Kitchen/Counters/DefaultMaterial_BaseColor
-MRUItem9=/Game/Assets/Kitchen/Floor_tile/stone_floor_tile_OCC
-MRUItem10=/Game/Assets/Kitchen/Floor_tile/stone_floor_tile2
-MRUItem11=/Game/Assets/Kitchen/Floor_tile/stone_floor_tile
-MRUItem12=/Game/Assets/Environment/rock_1/rock_2
-MRUItem13=/Game/Assets/Environment/rock_1/rock_1_PolySphere_BaseColor_Mat
-MRUItem14=/Game/Assets/Environment/rock_1/rock_1_PolySphere_BaseColor
-MRUItem15=/Game/Assets/Environment/rock_1/rock_1
-MRUItem16=/Game/ThirdPerson/Maps/ThirdPersonMap
-MRUItem17=/Game/ThirdPerson/Maps/main_menu
-MRUItem18=/Game/ThirdPerson/Blueprints/Jelly_PlayerBP
-MRUItem19=/Game/Animations/Jelly/tray/trayfbx
+MRUItem0=/Game/UI/Main_Menu/Settings_Menu
+MRUItem1=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem2=/Game/UI/Main_Menu/fridge_menu
+MRUItem3=/Game/UI/Main_Menu/FridgeBP
+MRUItem4=/Game/ThirdPerson/Maps/title_screen
+MRUItem5=/Game/Animations/Jelly/materials/Jelly/Red_Jelly
+MRUItem6=/Game/UI/Main_Menu/X_Prompt
+MRUItem7=/Game/UI/Main_Menu/Fridge
+MRUItem8=/Game/Assets/Title_Screen/Ramp
+MRUItem9=/Game/Assets/Kitchen/Counters/DefaultMaterial_BaseColor
+MRUItem10=/Game/Assets/Kitchen/Floor_tile/stone_floor_tile_OCC
+MRUItem11=/Game/Assets/Kitchen/Floor_tile/stone_floor_tile2
+MRUItem12=/Game/Assets/Kitchen/Floor_tile/stone_floor_tile
+MRUItem13=/Game/Assets/Environment/rock_1/rock_2
+MRUItem14=/Game/Assets/Environment/rock_1/rock_1_PolySphere_BaseColor_Mat
+MRUItem15=/Game/Assets/Environment/rock_1/rock_1_PolySphere_BaseColor
+MRUItem16=/Game/Assets/Environment/rock_1/rock_1
+MRUItem17=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem18=/Game/ThirdPerson/Maps/main_menu
+MRUItem19=/Game/ThirdPerson/Blueprints/Jelly_PlayerBP
 
 [DetailCategories]
 BP_MixingMachine_C.Tick=True
@@ -2360,6 +2363,30 @@ SphereComponent.Tags=True
 SphereComponent.ComponentReplication=True
 SphereComponent.Cooking=True
 SphereComponent.Events=True
+fridge_menu_C.Appearance=True
+fridge_menu_C.Designer=True
+fridge_menu_C.Input=True
+fridge_menu_C.Interaction=True
+fridge_menu_C.Performance=True
+fridge_menu_C.Layout=True
+fridge_menu_C.Behavior=True
+fridge_menu_C.Render Transform=True
+fridge_menu_C.Localization=True
+fridge_menu_C.Accessibility=True
+fridge_menu_C.Clipping=True
+fridge_menu_C.Navigation=True
+Settings_Menu_C.Appearance=True
+Settings_Menu_C.Designer=True
+Settings_Menu_C.Input=True
+Settings_Menu_C.Interaction=True
+Settings_Menu_C.Performance=True
+Settings_Menu_C.Layout=True
+Settings_Menu_C.Behavior=True
+Settings_Menu_C.Render Transform=True
+Settings_Menu_C.Localization=True
+Settings_Menu_C.Accessibility=True
+Settings_Menu_C.Clipping=True
+Settings_Menu_C.Navigation=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/LevelPrototyping/Meshes/SM_Cylinder.SM_Cylinder;
@@ -2917,7 +2944,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=0.000 Y=2.000
-ScreenPosition=X=0.000 Y=2.000
+ScreenPosition=X=-238.000 Y=296.000
 WindowSize=X=1912.000 Y=1072.000
 WindowSize=X=1912.000 Y=1072.000
 InitiallyMaximized=True
@@ -3145,8 +3172,8 @@ AnimGraphNode_Base=
 K2Node=
 EdGraphNode=
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" "
-SceneComponent="\"Object.Collision.BodyInstance\" "
-ActorComponent="\"Object.Collision.BodyInstance\" "
+SceneComponent=
+ActorComponent=
 CameraActor=
 StaticMeshComponent="\"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object.Collision.BodyInstance\" "
@@ -3198,10 +3225,10 @@ NavModifierVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-BP_ThirdPersonCharacter_C="\"Object.Mesh\" "
-MonsterCafeCharacter="\"Object.Mesh\" "
-Character="\"Object.Mesh\" "
-Pawn="\"Object.Mesh\" "
+BP_ThirdPersonCharacter_C=
+MonsterCafeCharacter=
+Character=
+Pawn=
 RotatingMovementComponent=
 MovementComponent=
 SphereComponent="\"Object.Collision.BodyInstance\" "
@@ -3393,7 +3420,7 @@ GraphEditorQuickJumps=()
 [DetailCustomWidgetExpansion]
 CameraComponent=CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Color Grading,
 CameraActor=CameraActor.PostProcess.Rendering Features,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.RotationRate,PlayerStart.TransformCommon.Transform,SceneComponent.TransformCommon.Transform,CameraActor.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.Mesh,
-SceneComponent=CameraActor.PostProcess.Rendering Features,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.RotationRate,K2Node_VariableGet.DefaultValueCategory.Mesh,PlayerStart.TransformCommon.Transform,SceneComponent.TransformCommon.Transform,CameraActor.TransformCommon.Transform,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+SceneComponent=
 StaticMeshActor=CameraActor.PostProcess.Rendering Features,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.RotationRate,K2Node_VariableGet.DefaultValueCategory.Mesh,PlayerStart.TransformCommon.Transform,SceneComponent.TransformCommon.Transform,CameraActor.TransformCommon.Transform,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis,
 BP_Ingredient_Base_C=CameraActor.PostProcess.Rendering Features,
@@ -3526,7 +3553,7 @@ FridgeBP_C=CameraActor.PostProcess.Rendering Features,StaticMeshActor.Physics.Co
 K2Node_Timeline=CameraActor.PostProcess.Rendering Features,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.RotationRate,K2Node_VariableGet.DefaultValueCategory.Mesh,
 PlayerController=CameraActor.PostProcess.Rendering Features,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.RotationRate,K2Node_VariableGet.DefaultValueCategory.Mesh,
 title_screen_C=CameraActor.PostProcess.Rendering Features,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.RotationRate,K2Node_VariableGet.DefaultValueCategory.Mesh,PlayerStart.TransformCommon.Transform,SceneComponent.TransformCommon.Transform,CameraActor.TransformCommon.Transform,
-K2Node_MacroInstance=CameraActor.PostProcess.Rendering Features,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.RotationRate,K2Node_VariableGet.DefaultValueCategory.Mesh,
+K2Node_MacroInstance=CameraActor.PostProcess.Rendering Features,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.RotationRate,K2Node_VariableGet.DefaultValueCategory.Mesh,PlayerStart.TransformCommon.Transform,SceneComponent.TransformCommon.Transform,CameraActor.TransformCommon.Transform,
 K2Node=CameraActor.PostProcess.Rendering Features,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,
 fridge_menu_C=CameraActor.PostProcess.Rendering Features,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.RotationRate,K2Node_VariableGet.DefaultValueCategory.Mesh,
 Character=CameraActor.PostProcess.Rendering Features,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.RotationRate,K2Node_VariableGet.DefaultValueCategory.Mesh,PlayerStart.TransformCommon.Transform,SceneComponent.TransformCommon.Transform,CameraActor.TransformCommon.Transform,
@@ -3539,6 +3566,7 @@ CameraRig_Rail=CameraActor.PostProcess.Rendering Features,StaticMeshActor.Physic
 AIController=CameraActor.PostProcess.Rendering Features,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.RotationRate,K2Node_VariableGet.DefaultValueCategory.Mesh,
 SkeletalMeshComponent=CameraActor.PostProcess.Rendering Features,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.RotationRate,K2Node_VariableGet.DefaultValueCategory.Mesh,
 PrimitiveComponent=CameraActor.PostProcess.Rendering Features,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.RotationRate,K2Node_VariableGet.DefaultValueCategory.Mesh,PlayerStart.TransformCommon.Transform,SceneComponent.TransformCommon.Transform,CameraActor.TransformCommon.Transform,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+K2Node_EditablePinBase=CameraActor.PostProcess.Rendering Features,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.RotationRate,K2Node_VariableGet.DefaultValueCategory.Mesh,PlayerStart.TransformCommon.Transform,SceneComponent.TransformCommon.Transform,CameraActor.TransformCommon.Transform,
 
 [MaterialEditor]
 PrimType=0
@@ -3622,6 +3650,7 @@ CharacterMovementComponent.Character Movement: Walking=True
 CharacterMovementComponent.Character Movement: Jumping / Falling=True
 CharacterMovementComponent.ComponentTick=True
 BP_ThirdPersonCharacter_C.Replication=False
+InputSettings.Bindings=False
 
 [FBX_Export_UI_Option_FbxExportOption]
 FbxExportCompatibility=FBX_2013
