--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -191,7 +191,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [ModuleFileTracking]
-MonsterCafe.TimeStamp=2023.03.23-16.47.27
+MonsterCafe.TimeStamp=2023.05.01-10.41.31
 MonsterCafe.LastCompileMethod=External
 StorageServerClient.TimeStamp=2023.01.07-16.06.09
 StorageServerClient.LastCompileMethod=Unknown
@@ -1089,6 +1089,8 @@ PinnedCommandList.TimeStamp=2023.01.07-16.05.58
 PinnedCommandList.LastCompileMethod=Unknown
 NullDrv.TimeStamp=2023.01.07-16.05.55
 NullDrv.LastCompileMethod=Unknown
+WorldBrowser.TimeStamp=2022.10.25-09.57.05
+WorldBrowser.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -2127,9 +2129,9 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=1797.000 Y=231.000
+ScreenPosition=X=-570.000 Y=259.000
 WindowSize=X=3148.000 Y=1273.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2160,6 +2162,7 @@ Project=C:/Program Files/Epic Games/UE_5.0/
 
 [Python]
 LastDirectory=
+RecentsFiles=H:/EPIC GAMES/Unreal Engine/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [DetailCustomWidgetExpansion]
