--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -129,7 +129,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/Blueprints
-ContentBrowserTab1.SelectedPaths=/Game/Animations/Jelly/AnimationBP
+ContentBrowserTab1.SelectedPaths=/Game/Assets
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
@@ -208,7 +208,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [ModuleFileTracking]
-MonsterCafe.TimeStamp=2023.03.22-18.59.21
+MonsterCafe.TimeStamp=2023.05.01-10.31.09
 MonsterCafe.LastCompileMethod=External
 StorageServerClient.TimeStamp=2023.01.07-16.06.09
 StorageServerClient.LastCompileMethod=Unknown
@@ -1107,9 +1107,6 @@ PinnedCommandList.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
-OpenAssetsAtExit=/Game/Animations/Jelly/AnimationBP/Jelly_AnimationBP.Jelly_AnimationBP
-OpenAssetsAtExit=/Game/Animations/Jelly/AnimationBP/-3HPAnimationBP.-3HPAnimationBP
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Animations/Jelly/AnimationBP/-3HPAnimationBP
@@ -1540,7 +1537,7 @@ RecentlyPlaced=/Game/Assets/Kitchen/Jelly/Ingredients/mochi/mochi_low.mochi_low;
 
 [MessageLog]
 LastLogListing=PIE
-LastLogListing=PIE
+LastLogListing=LoadErrors
 None=======
 Jelly_PlayerBP_C.Character=True
 Jelly_PlayerBP_C.Tick=True
@@ -2072,11 +2069,11 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=0.000 Y=2.000
-ScreenPosition=X=-62.000 Y=220.000
+ScreenPosition=X=508.000 Y=68.000
 WindowSize=X=1912.000 Y=1072.000
 WindowSize=X=2036.000 Y=1163.000
 InitiallyMaximized=True
-InitiallyMaximized=True
+InitiallyMaximized=False
 None=======
 
 [SlateAdditionalLayoutConfig]
@@ -2143,9 +2140,9 @@ Project=C:/Program Files/Epic Games/UE_5.0/
 [Python]
 LastDirectory=
 LastDirectory=
+RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=H:/EPIC GAMES/Unreal Engine/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 None=======
 
 [FBX_Import_UI_Option_FbxImportUI]
