--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -50,7 +50,7 @@ ManualIPAddress=
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=NavigationOnly
 HardwareCursors=()
-SoftwareCursors=((Default, None))
+SoftwareCursors=((Default, "/Game/UI/cursor_pointer.cursor_pointer_C"),(Hand, "/Game/UI/cursor_hand.cursor_hand_C"))
 ApplicationScale=1.000000
 UIScaleRule=ShortestSide
 CustomScalingRuleClass=None
