--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1083,6 +1083,8 @@ TextureEditor.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_MixingMachineBowl.BP_MixingMachineBowl
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 
 [MessageLog]
 LastLogListing=PIE
@@ -1806,8 +1808,8 @@ RecentlyPlaced=/Game/ThirdPerson/Blueprints/water_jug_crate.water_jug_crate;
 RecentlyPlaced=/Game/ThirdPerson/Blueprints/mochi_crate.mochi_crate;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Blueprints/BP_MixingMachineBowl
-MRUItem1=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem1=/Game/ThirdPerson/Blueprints/BP_MixingMachineBowl
 MRUItem2=/Game/ThirdPerson/Blueprints/Jelly_PlayerBP
 MRUItem3=/Game/ThirdPerson/Blueprints/BP_Table
 MRUItem4=/Game/ThirdPerson/Blueprints/BP_FoodCrate
@@ -1916,9 +1918,9 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/ThirdPerson/Maps/title_screen.title_screen", ()))
 
 [RootWindow]
-ScreenPosition=X=115.000 Y=104.000
+ScreenPosition=X=634.000 Y=-852.000
 WindowSize=X=2279.000 Y=1243.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1949,8 +1951,8 @@ Project=H:/EPIC GAMES/Unreal Engine/UE_5.0/
 
 [Python]
 LastDirectory=
-RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=H:/EPIC GAMES/Unreal Engine/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bShowGrid=False
