--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -153,7 +153,7 @@ ContentBrowserDrawer.SelectedCollections=
 ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Classes_Game
+ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.FavoritesAreaExpanded=False
@@ -1083,8 +1083,6 @@ TextureEditor.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_MixingMachineBowl.BP_MixingMachineBowl
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 
 [MessageLog]
 LastLogListing=PIE
@@ -1784,6 +1782,49 @@ Jelly_PlayerBP_C.Actor=True
 Jelly_PlayerBP_C.Input=True
 Jelly_PlayerBP_C.WorldPartition=True
 Jelly_PlayerBP_C.Events=True
+BP_NPC_C.Tick=True
+BP_NPC_C.ComponentTick=True
+BP_NPC_C.ComponentReplication=True
+BP_NPC_C.Variable=True
+BP_NPC_C.Events=True
+CapsuleComponent.Variable=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Sockets=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.HLOD=True
+CapsuleComponent.ComponentTick=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Tags=True
+CapsuleComponent.ComponentReplication=True
+CapsuleComponent.Cooking=True
+CapsuleComponent.Events=True
+SkeletalMeshComponent.Variable=True
+SkeletalMeshComponent.TransformCommon=True
+SkeletalMeshComponent.Sockets=True
+SkeletalMeshComponent.Animation=True
+SkeletalMeshComponent.Mesh=True
+SkeletalMeshComponent.Materials=True
+SkeletalMeshComponent.ComponentTick=True
+SkeletalMeshComponent.Clothing=True
+SkeletalMeshComponent.MasterPoseComponent=True
+SkeletalMeshComponent.AnimationRig=True
+SkeletalMeshComponent.Physics=True
+SkeletalMeshComponent.Collision=True
+SkeletalMeshComponent.Deformer=True
+SkeletalMeshComponent.Lighting=True
+SkeletalMeshComponent.SkinWeights=True
+SkeletalMeshComponent.HLOD=True
+SkeletalMeshComponent.Rendering=True
+SkeletalMeshComponent.Navigation=True
+SkeletalMeshComponent.VirtualTexture=True
+SkeletalMeshComponent.Tags=True
+SkeletalMeshComponent.ComponentReplication=True
+SkeletalMeshComponent.Activation=True
+SkeletalMeshComponent.Cooking=True
+SkeletalMeshComponent.Events=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/ThirdPerson/Blueprints/Jelly_cooked_children/BP_Ingredient_Base_Melon_jelly.BP_Ingredient_Base_Melon_jelly;
@@ -1808,26 +1849,26 @@ RecentlyPlaced=/Game/ThirdPerson/Blueprints/water_jug_crate.water_jug_crate;
 RecentlyPlaced=/Game/ThirdPerson/Blueprints/mochi_crate.mochi_crate;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem1=/Game/ThirdPerson/Blueprints/BP_MixingMachineBowl
-MRUItem2=/Game/ThirdPerson/Blueprints/Jelly_PlayerBP
-MRUItem3=/Game/ThirdPerson/Blueprints/BP_Table
-MRUItem4=/Game/ThirdPerson/Blueprints/BP_FoodCrate
-MRUItem5=/Game/ThirdPerson/Maps/ThirdPersonMap
-MRUItem6=/Game/ThirdPerson/Maps/title_screen
-MRUItem7=/Game/ThirdPerson/Blueprints/BP_Ingredient_Child_Bone
-MRUItem8=/Game/UI/Main_Menu/FridgeBP
-MRUItem9=/Game/UI/Main_Menu/fridge_menu
-MRUItem10=/Game/ThirdPerson/Blueprints/conveyor
-MRUItem11=/Game/ThirdPerson/Blueprints/jelly_machine_conveyor
-MRUItem12=/Game/ThirdPerson/Blueprints/Jelly_cooked_children/BP_Ingredient_Base_Mochi_jelly
-MRUItem13=/Game/ThirdPerson/Blueprints/Jelly_cooked_children/BP_Jelly_Base_Mochi
-MRUItem14=/Game/ThirdPerson/Blueprints/Jelly_cooked_children/BP_Ingredient_Base_Melon_jelly
-MRUItem15=/Game/Assets/Kitchen/Jelly/cooked_jelly/melonjelly/melonjelly_combine_melonjelly_low
-MRUItem16=/Game/Assets/Kitchen/Jelly/cooked_jelly/melonjelly/melonjelly_combine_melonbowl_low
-MRUItem17=/Game/ThirdPerson/Blueprints/BP_Jelly_Base_melon
-MRUItem18=/Game/ThirdPerson/Blueprints/jelly_mix_crate
-MRUItem19=/Game/ThirdPerson/Blueprints/mochi_crate
+MRUItem0=/Game/ThirdPerson/Blueprints/BP_MixingMachineBowl
+MRUItem1=/Game/AI/BP_NPC
+MRUItem2=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem3=/Game/ThirdPerson/Blueprints/Jelly_PlayerBP
+MRUItem4=/Game/ThirdPerson/Blueprints/BP_Table
+MRUItem5=/Game/ThirdPerson/Blueprints/BP_FoodCrate
+MRUItem6=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem7=/Game/ThirdPerson/Maps/title_screen
+MRUItem8=/Game/ThirdPerson/Blueprints/BP_Ingredient_Child_Bone
+MRUItem9=/Game/UI/Main_Menu/FridgeBP
+MRUItem10=/Game/UI/Main_Menu/fridge_menu
+MRUItem11=/Game/ThirdPerson/Blueprints/conveyor
+MRUItem12=/Game/ThirdPerson/Blueprints/jelly_machine_conveyor
+MRUItem13=/Game/ThirdPerson/Blueprints/Jelly_cooked_children/BP_Ingredient_Base_Mochi_jelly
+MRUItem14=/Game/ThirdPerson/Blueprints/Jelly_cooked_children/BP_Jelly_Base_Mochi
+MRUItem15=/Game/ThirdPerson/Blueprints/Jelly_cooked_children/BP_Ingredient_Base_Melon_jelly
+MRUItem16=/Game/Assets/Kitchen/Jelly/cooked_jelly/melonjelly/melonjelly_combine_melonjelly_low
+MRUItem17=/Game/Assets/Kitchen/Jelly/cooked_jelly/melonjelly/melonjelly_combine_melonbowl_low
+MRUItem18=/Game/ThirdPerson/Blueprints/BP_Jelly_Base_melon
+MRUItem19=/Game/ThirdPerson/Blueprints/jelly_mix_crate
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Blueprints/BP_FoodCrate.BP_FoodCrate=1
@@ -1861,6 +1902,7 @@ MRUItem19=/Game/ThirdPerson/Blueprints/mochi_crate
 /Game/ThirdPerson/Blueprints/BP_Ingredient_Child_Bone.BP_Ingredient_Child_Bone=1
 /Game/ThirdPerson/Blueprints/Jelly_PlayerBP.Jelly_PlayerBP=1
 /Game/ThirdPerson/Blueprints/BP_Table.BP_Table=1
+/Game/AI/BP_NPC.BP_NPC=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1918,9 +1960,9 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/ThirdPerson/Maps/title_screen.title_screen", ()))
 
 [RootWindow]
-ScreenPosition=X=634.000 Y=-852.000
+ScreenPosition=X=478.000 Y=95.000
 WindowSize=X=2279.000 Y=1243.000
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1951,8 +1993,8 @@ Project=H:/EPIC GAMES/Unreal Engine/UE_5.0/
 
 [Python]
 LastDirectory=
-RecentsFiles=H:/EPIC GAMES/Unreal Engine/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=H:/EPIC GAMES/Unreal Engine/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bShowGrid=False
