--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -127,7 +127,6 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,VisualizeMotionVectors=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,NaniteMeshes=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,VisualizeLevelInstanceEditing=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeStrataMaterial=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,SingleLayerWaterRefractionFullPrecision=0,VirtualTextureResidency=1,DVRStreamingSystem=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenScreenSpaceDirectionalOcclusion=1,LumenReuseShadowMaps=1",GameShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,VisualizeMotionVectors=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,NaniteMeshes=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,VisualizeLevelInstanceEditing=1,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeStrataMaterial=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,SingleLayerWaterRefractionFullPrecision=0,VirtualTextureResidency=1,DVRStreamingSystem=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenScreenSpaceDirectionalOcclusion=1,LumenReuseShadowMaps=1",BufferVisualizationMode="",NaniteVisualizationMode="",LumenVisualizationMode="",VirtualShadowMapVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 CurrentRotGridSize=6
 GridEnabled=False
-RotGridEnabled=False
 SnapScaleEnabled=False
 
 [ContentBrowser]
@@ -189,7 +188,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [ModuleFileTracking]
-MonsterCafe.TimeStamp=2023.05.03-09.49.40
+MonsterCafe.TimeStamp=2023.05.03-09.56.13
 MonsterCafe.LastCompileMethod=External
 StorageServerClient.TimeStamp=2023.01.07-16.06.09
 StorageServerClient.LastCompileMethod=External
@@ -1087,9 +1086,12 @@ TextureEditor.TimeStamp=2022.10.25-09.57.00
 TextureEditor.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_MixingMachineBowl.BP_MixingMachineBowl
-OpenAssetsAtExit=/Game/Assets/Kitchen/Jelly/cooked_jelly/melonjelly/Bowl_default.Bowl_default
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/plate_crate.plate_crate
+OpenAssetsAtExit=/Game/UI/game_ui/Game_ui.Game_ui
+OpenAssetsAtExit=/Game/AI/BP_NPC.BP_NPC
 
 [MessageLog]
 LastLogListing=PIE
@@ -1869,8 +1871,46 @@ MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
 MaterialExpressionVectorParameter.MaterialExpression=True
 MaterialExpressionVectorParameter.CustomPrimitiveData=True
 MaterialExpressionVectorParameter.ParameterCustomization=True
+StaticMeshActor.LOD=True
+StaticMeshActor.RayTracing=True
+StaticMeshActor.TextureStreaming=True
+StaticMeshActor.MaterialParameters=True
+StaticMeshActor.Mobile=True
+plate_crate_C.Default=True
+plate_crate_C.Tick=True
+plate_crate_C.Replication=True
+plate_crate_C.Rendering=True
+plate_crate_C.Collision=True
+plate_crate_C.Actor=True
+plate_crate_C.Input=True
+plate_crate_C.HLOD=True
+plate_crate_C.WorldPartition=True
+plate_crate_C.Events=True
+Game_ui_C.Default=True
+Game_ui_C.Appearance=True
+Game_ui_C.Designer=True
+Game_ui_C.Input=True
+Game_ui_C.Interaction=True
+Game_ui_C.Performance=True
+Game_ui_C.Layout=True
+Game_ui_C.Behavior=True
+Game_ui_C.Render Transform=True
+Game_ui_C.Localization=True
+Game_ui_C.Accessibility=True
+Game_ui_C.Clipping=True
+Game_ui_C.Navigation=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
+K2Node_FunctionEntry.GraphNodeDetail=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+PropertyWrapper.Events=True
+BP_NPC_C.SkeletalMesh=True
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/ThirdPerson/Blueprints/Jelly_cooked_children/BP_Ingredient_Base_Melon_jelly.BP_Ingredient_Base_Melon_jelly;
 RecentlyPlaced=/Game/ThirdPerson/Blueprints/Jelly_cooked_children/BP_Jelly_Base_melon.BP_Jelly_Base_melon;
 RecentlyPlaced=/Game/AI/BP_NPC.BP_NPC;
@@ -1890,29 +1930,28 @@ RecentlyPlaced=/Game/ThirdPerson/Blueprints/Jelly_cooked_children/BP_Ingredient_
 RecentlyPlaced=/Game/ThirdPerson/Blueprints/jelly_mix_crate.jelly_mix_crate;
 RecentlyPlaced=/Game/ThirdPerson/Blueprints/fountain_BP.fountain_BP;
 RecentlyPlaced=/Game/ThirdPerson/Blueprints/water_jug_crate.water_jug_crate;
-RecentlyPlaced=/Game/ThirdPerson/Blueprints/mochi_crate.mochi_crate;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/Kitchen/Jelly/cooked_jelly/melonjelly/Bowl_default
-MRUItem1=/Game/Assets/Kitchen/Jelly/cooked_jelly/melonjelly/water
-MRUItem2=/Game/ThirdPerson/Blueprints/BP_MixingMachineBowl
-MRUItem3=/Game/ThirdPerson/Blueprints/BP_Table
-MRUItem4=/Game/ThirdPerson/Maps/title_screen
-MRUItem5=/Game/ThirdPerson/Blueprints/Mixing_Machine_New
-MRUItem6=/Game/AI/BP_NPC
-MRUItem7=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem8=/Game/ThirdPerson/Blueprints/Jelly_PlayerBP
-MRUItem9=/Game/ThirdPerson/Blueprints/BP_FoodCrate
-MRUItem10=/Game/ThirdPerson/Maps/ThirdPersonMap
-MRUItem11=/Game/ThirdPerson/Blueprints/BP_Ingredient_Child_Bone
-MRUItem12=/Game/UI/Main_Menu/FridgeBP
-MRUItem13=/Game/UI/Main_Menu/fridge_menu
-MRUItem14=/Game/ThirdPerson/Blueprints/conveyor
-MRUItem15=/Game/ThirdPerson/Blueprints/jelly_machine_conveyor
-MRUItem16=/Game/ThirdPerson/Blueprints/Jelly_cooked_children/BP_Ingredient_Base_Mochi_jelly
-MRUItem17=/Game/ThirdPerson/Blueprints/Jelly_cooked_children/BP_Jelly_Base_Mochi
-MRUItem18=/Game/ThirdPerson/Blueprints/Jelly_cooked_children/BP_Ingredient_Base_Melon_jelly
-MRUItem19=/Game/Assets/Kitchen/Jelly/cooked_jelly/melonjelly/melonjelly_combine_melonjelly_low
+MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem1=/Game/ThirdPerson/Blueprints/BP_MixingMachineBowl
+MRUItem2=/Game/ThirdPerson/Blueprints/plate_crate
+MRUItem3=/Game/UI/game_ui/Game_ui
+MRUItem4=/Game/AI/BP_NPC
+MRUItem5=/Game/ThirdPerson/Blueprints/water_jug_crate
+MRUItem6=/Game/ThirdPerson/Blueprints/mochi_crate
+MRUItem7=/Game/ThirdPerson/Blueprints/jelly_mix_crate
+MRUItem8=/Game/ThirdPerson/Blueprints/melon_crate
+MRUItem9=/Game/Assets/Kitchen/Jelly/cooked_jelly/melonjelly/Bowl_default
+MRUItem10=/Game/Assets/Kitchen/Jelly/cooked_jelly/melonjelly/water
+MRUItem11=/Game/ThirdPerson/Blueprints/BP_Table
+MRUItem12=/Game/ThirdPerson/Maps/title_screen
+MRUItem13=/Game/ThirdPerson/Blueprints/Mixing_Machine_New
+MRUItem14=/Game/ThirdPerson/Blueprints/Jelly_PlayerBP
+MRUItem15=/Game/ThirdPerson/Blueprints/BP_FoodCrate
+MRUItem16=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem17=/Game/ThirdPerson/Blueprints/BP_Ingredient_Child_Bone
+MRUItem18=/Game/UI/Main_Menu/FridgeBP
+MRUItem19=/Game/UI/Main_Menu/fridge_menu
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Blueprints/BP_FoodCrate.BP_FoodCrate=1
@@ -1950,6 +1989,7 @@ MRUItem19=/Game/Assets/Kitchen/Jelly/cooked_jelly/melonjelly/melonjelly_combine_
 /Game/ThirdPerson/Blueprints/Mixing_Machine_New.Mixing_Machine_New=1
 /Game/Assets/Kitchen/Jelly/cooked_jelly/melonjelly/water.water=1
 /Game/Assets/Kitchen/Jelly/cooked_jelly/melonjelly/Bowl_default.Bowl_default=1
+/Game/ThirdPerson/Blueprints/plate_crate.plate_crate=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2191,8 +2231,8 @@ Image="\"Object.Appearance.Brush\" "
 Widget=
 Visual=
 Object=
-StaticMeshComponent=
-MeshComponent=
+StaticMeshComponent="\"Object.Collision.BodyInstance\" "
+MeshComponent="\"Object.Collision.BodyInstance\" "
 PrimitiveComponent=
 SceneComponent=
 ActorComponent=
@@ -2201,6 +2241,13 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BP_Table_C=
 Table=
+StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
+BoxComponent="\"Object.Collision.BodyInstance\" "
+ShapeComponent=
+BP_NPC_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+NPC="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+Character="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+Pawn="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
 
 [SelectionDetails]
 PreserveScaleRatio=False
@@ -2208,4 +2255,10 @@ PreserveScaleRatio=False
 [MRU]
 MRUItem0=/Game/ThirdPerson/Maps/title_screen
 MRUItem1=/Game/ThirdPerson/Maps/ThirdPersonMap
+
+[DetailCustomWidgetExpansion]
+StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,
+
+[DetailCategoriesAdvanced]
+BoxComponent.Rendering=False
 
