--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+GameDefaultMap=/Game/ThirdPerson/Maps/title_screen.title_screen
+EditorStartupMap=/Game/ThirdPerson/Maps/title_screen.title_screen
 GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_GameMode.BP_GameMode_C
 bUseSplitscreen=False
 
