--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -147,7 +147,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game
+ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Blueprints/Jelly_cooked_children
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1094,7 +1094,7 @@ ExternalImagePicker.TimeStamp=2022.10.25-09.56.46
 ExternalImagePicker.LastCompileMethod=External
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [MessageLog]
 LastLogListing=PIE
@@ -2901,8 +2901,102 @@ ProgressBar.Clipping=True
 ProgressBar.Navigation=True
 ProgressBar.Localization=True
 mochi_order_C.Default=True
+BP_MixingMachine_C.Tick=True
+BP_MixingMachine_C.Events=True
+BP_Jelly_Base_melon_sludge_C.Default=True
+BP_Jelly_Base_melon_sludge_C.Tick=True
+BP_Jelly_Base_melon_sludge_C.Replication=True
+BP_Jelly_Base_melon_sludge_C.Rendering=True
+BP_Jelly_Base_melon_sludge_C.Collision=True
+BP_Jelly_Base_melon_sludge_C.Actor=True
+BP_Jelly_Base_melon_sludge_C.Input=True
+BP_Jelly_Base_melon_sludge_C.HLOD=True
+BP_Jelly_Base_melon_sludge_C.WorldPartition=True
+BP_Jelly_Base_melon_sludge_C.Events=True
+melon_order1_C.Default=True
+melon_order1_C.Appearance=True
+melon_order1_C.Designer=True
+melon_order1_C.Input=True
+melon_order1_C.Interaction=True
+melon_order1_C.Performance=True
+melon_order1_C.Layout=True
+melon_order1_C.Behavior=True
+melon_order1_C.Render Transform=True
+melon_order1_C.Localization=True
+melon_order1_C.Accessibility=True
+melon_order1_C.Clipping=True
+melon_order1_C.Navigation=True
+BP_Ingredient_Base_jellymix_C.TransformCommon=True
+BP_Ingredient_Base_jellymix_C.Ingredient_Base=True
+BP_Ingredient_Base_jellymix_C.Rendering=True
+BP_Ingredient_Base_jellymix_C.Replication=True
+BP_Ingredient_Base_jellymix_C.Collision=True
+BP_Ingredient_Base_jellymix_C.HLOD=True
+BP_Ingredient_Base_jellymix_C.WorldPartition=True
+BP_Ingredient_Base_jellymix_C.Input=True
+BP_Ingredient_Base_jellymix_C.Actor=True
+cooking_bar_C.Default=True
+cooking_bar_C.Appearance=True
+cooking_bar_C.Designer=True
+cooking_bar_C.Input=True
+cooking_bar_C.Interaction=True
+cooking_bar_C.Performance=True
+cooking_bar_C.Layout=True
+cooking_bar_C.Behavior=True
+cooking_bar_C.Render Transform=True
+cooking_bar_C.Localization=True
+cooking_bar_C.Accessibility=True
+cooking_bar_C.Clipping=True
+cooking_bar_C.Navigation=True
+BP_Jelly_Base_melon_C.Default=True
+K2Node_Composite.GraphNodeDetail=True
+K2Node_Composite.Graph=True
+K2Node_Composite.Inputs=True
+K2Node_Composite.Outputs=True
+MeshComponent.TransformCommon=True
+MeshComponent.Materials=True
+MeshComponent.ComponentTick=True
+MeshComponent.HLOD=True
+MeshComponent.Physics=True
+MeshComponent.Collision=True
+MeshComponent.Rendering=True
+MeshComponent.Navigation=True
+MeshComponent.VirtualTexture=True
+MeshComponent.Tags=True
+MeshComponent.ComponentReplication=True
+MeshComponent.Variable=True
+MeshComponent.Cooking=True
+BP_Jelly_Base_Mochi_sludge_C.Default=True
+BP_Jelly_Base_Mochi_sludge_C.Tick=True
+BP_Jelly_Base_Mochi_sludge_C.Replication=True
+BP_Jelly_Base_Mochi_sludge_C.Rendering=True
+BP_Jelly_Base_Mochi_sludge_C.Collision=True
+BP_Jelly_Base_Mochi_sludge_C.Actor=True
+BP_Jelly_Base_Mochi_sludge_C.Input=True
+BP_Jelly_Base_Mochi_sludge_C.HLOD=True
+BP_Jelly_Base_Mochi_sludge_C.WorldPartition=True
+BP_Jelly_Base_Mochi_sludge_C.Events=True
+BP_Jelly_Base_Mochi_C.Default=True
+overcooking_bar_C.Default=True
+overcooking_bar_C.Appearance=True
+overcooking_bar_C.Designer=True
+overcooking_bar_C.Input=True
+overcooking_bar_C.Interaction=True
+overcooking_bar_C.Performance=True
+overcooking_bar_C.Layout=True
+overcooking_bar_C.Behavior=True
+overcooking_bar_C.Render Transform=True
+overcooking_bar_C.Localization=True
+overcooking_bar_C.Accessibility=True
+overcooking_bar_C.Clipping=True
+overcooking_bar_C.Navigation=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/ThirdPerson/Blueprints/Ingredient_children/BP_Ingredient_Base_jellymix.BP_Ingredient_Base_jellymix;
+RecentlyPlaced=/Game/ThirdPerson/Blueprints/Ingredient_children/BP_Ingredient_Base_water.BP_Ingredient_Base_water;
+RecentlyPlaced=/Game/ThirdPerson/Blueprints/Ingredient_children/BP_Ingredient_Base_melon.BP_Ingredient_Base_melon;
+RecentlyPlaced=/Game/ThirdPerson/Blueprints/Mixing_Machine_New.Mixing_Machine_New;
+RecentlyPlaced=/Game/ThirdPerson/Blueprints/BP_MixingMachine.BP_MixingMachine;
 RecentlyPlaced=/Game/ThirdPerson/Blueprints/conveyors/conveyor_3.conveyor_3;
 RecentlyPlaced=/Game/ThirdPerson/Blueprints/conveyors/conveyor_2.conveyor_2;
 RecentlyPlaced=/Game/ThirdPerson/Blueprints/conveyors/conveyor_1.conveyor_1;
@@ -2916,35 +3010,30 @@ RecentlyPlaced=/Game/ThirdPerson/Blueprints/BP_Jelly_Base.BP_Jelly_Base;
 RecentlyPlaced=/Game/ThirdPerson/Blueprints/conveyors/Right_conveyor.Right_conveyor;
 RecentlyPlaced=/Game/ThirdPerson/Blueprints/conveyors/middle_conveyor.middle_conveyor;
 RecentlyPlaced=/Game/ThirdPerson/Blueprints/conveyors/left_conveyor.left_conveyor;
-RecentlyPlaced=/Game/ThirdPerson/Blueprints/Jelly_cooked_children/BP_Ingredient_Base_Melon_jelly.BP_Ingredient_Base_Melon_jelly;
-RecentlyPlaced=/Game/ThirdPerson/Blueprints/Ingredient_children/BP_Ingredient_Base_water.BP_Ingredient_Base_water;
+RecentlyPlaced=/Game/ThirdPerson/Blueprints/Jelly_cooked_children/not_used/BP_Ingredient_Base_Melon_jelly.BP_Ingredient_Base_Melon_jelly;
 RecentlyPlaced=/Game/ThirdPerson/Blueprints/BP_MixingMachineBowl.BP_MixingMachineBowl;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/AI/BP_NPC.BP_NPC;
-RecentlyPlaced=/Script/MonsterCafe.NPC;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Blueprints/conveyors/conveyor_3
-MRUItem1=/Game/ThirdPerson/Blueprints/conveyors/conveyor_2
-MRUItem2=/Game/ThirdPerson/Blueprints/conveyors/conveyor_1
-MRUItem3=/Game/UI/game_ui/Order_screen
-MRUItem4=/Game/UI/game_ui/mochi_order
-MRUItem5=/Game/UI/game_ui/melon_order1
-MRUItem6=/Game/UI/game_ui/Game_ui
-MRUItem7=/Game/UI/game_ui/melon_order
-MRUItem8=/Game/UI/game_ui/Ready_countdown
-MRUItem9=/Game/ThirdPerson/Maps/ThirdPersonMap
-MRUItem10=/Game/UI/game_ui/Order
-MRUItem11=/Game/ThirdPerson/Blueprints/conveyors/conveyor1
-MRUItem12=/Game/Animations/Shitanagauba/Shitanagauba_BP
-MRUItem13=/Game/Animations/Shitanagauba/shitanagauba
-MRUItem14=/Game/Animations/Shitanagauba/DefaultMaterial_BaseColor_Mat
-MRUItem15=/Game/ThirdPerson/Blueprints/BP_MixingMachineBowl
-MRUItem16=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem17=/Game/ThirdPerson/Blueprints/conveyors/left_conveyor
-MRUItem18=/Game/ThirdPerson/Blueprints/conveyor_non
-MRUItem19=/Game/ThirdPerson/Blueprints/conveyor
+MRUItem0=/Game/ThirdPerson/Blueprints/BP_MixingMachineBowl
+MRUItem1=/Game/UI/game_ui/overcooking_bar
+MRUItem2=/Game/ThirdPerson/Blueprints/Jelly_cooked_children/BP_Jelly_Base_Mochi
+MRUItem3=/Game/ThirdPerson/Blueprints/Jelly_cooked_children/BP_Jelly_Base_Mochi_sludge
+MRUItem4=/Game/ThirdPerson/Blueprints/Jelly_cooked_children/BP_Jelly_Base_melon_sludge
+MRUItem5=/Game/ThirdPerson/Blueprints/conveyors/conveyor_3
+MRUItem6=/Game/ThirdPerson/Blueprints/conveyors/conveyor_2
+MRUItem7=/Game/ThirdPerson/Blueprints/conveyors/conveyor_1
+MRUItem8=/Game/ThirdPerson/Blueprints/Jelly_cooked_children/BP_Jelly_Base_melon
+MRUItem9=/Game/UI/game_ui/mochi_order
+MRUItem10=/Game/UI/game_ui/items_in_bowl
+MRUItem11=/Game/UI/game_ui/melon_order1
+MRUItem12=/Game/UI/game_ui/cooking_bar
+MRUItem13=/Game/ThirdPerson/Blueprints/Mixing_Machine_New
+MRUItem14=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem15=/Game/ThirdPerson/Blueprints/fountain_BP
+MRUItem16=/Game/ThirdPerson/Blueprints/BP_MixingMachine
+MRUItem17=/Game/UI/game_ui/Order_screen
+MRUItem18=/Game/UI/game_ui/Game_ui
+MRUItem19=/Game/UI/game_ui/melon_order
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Blueprints/BP_FoodCrate.BP_FoodCrate=1
@@ -3025,6 +3114,11 @@ MRUItem19=/Game/ThirdPerson/Blueprints/conveyor
 /Game/ThirdPerson/Blueprints/conveyors/conveyor_2.conveyor_2=1
 /Game/ThirdPerson/Blueprints/conveyors/conveyor_3.conveyor_3=1
 /Game/UI/game_ui/melon_order1.melon_order1=1
+/Game/ThirdPerson/Blueprints/BP_MixingMachine.BP_MixingMachine=1
+/Game/UI/game_ui/overcooking_bar.overcooking_bar=1
+/Game/UI/game_ui/cooking_bar.cooking_bar=1
+/Game/ThirdPerson/Blueprints/Jelly_cooked_children/BP_Jelly_Base_melon_sludge.BP_Jelly_Base_melon_sludge=1
+/Game/ThirdPerson/Blueprints/Jelly_cooked_children/BP_Jelly_Base_Mochi_sludge.BP_Jelly_Base_Mochi_sludge=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3269,12 +3363,12 @@ MovieRendererName=
 Image="\"Object.Appearance.Brush\" "
 Widget=
 Visual=
-Object=
-StaticMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+Object="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+StaticMeshComponent="\"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-SceneComponent=
-ActorComponent=
+SceneComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+ActorComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -3293,7 +3387,7 @@ EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Obj
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[9]\" "
-WidgetComponent="\"Object.Collision.BodyInstance\" "
+WidgetComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 MaterialExpressionVectorParameter="\"Object.DefaultValue\" "
 MaterialExpressionParameter="\"Object.DefaultValue\" "
 MaterialExpression=
@@ -3315,7 +3409,7 @@ BrushComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Transfor
 BoxComponent=BoxComponent.Physics.ConstraintsGroup,
 SceneComponent=
 InstancedFoliageActor=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,
-BP_Table_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,
+BP_Table_C=
 plate_crate_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,
 melon_crate_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,
 mochi_crate_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,
@@ -3405,7 +3499,7 @@ UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.PickupPlace,
 conveyor_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,
 FridgeBP_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,
-BillboardComponent=
+BillboardComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,
 K2Node_VariableGet=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,
 K2Node_VariableSet=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,
 PlayerController=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,
@@ -3454,8 +3548,14 @@ conveyor_3_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformC
 melon_order_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,
 K2Node_FunctionResult=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,
 mochi_order_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,
-melon_order1_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,
+melon_order1_C=
 jelly_machine_conveyor_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,
+BP_MixingMachine_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,
+Mixing_Machine_New_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,
+cooking_bar_C=
+BP_Ingredient_Base_melon_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,
+BP_Ingredient_Base_jellymix_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,
+overcooking_bar_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,
 
 [DetailCategoriesAdvanced]
 BoxComponent.Rendering=False
@@ -3464,6 +3564,7 @@ FbxImportUI.Mesh=True
 K2Node_CustomEvent.Graph=False
 SceneComponent.Rendering=True
 SceneComponent.ComponentTick=True
+WidgetComponent.UserInterface=True
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
