--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@ GameDefaultMap=/Game/ThirdPerson/Maps/title_screen.title_screen
 EditorStartupMap=/Game/ThirdPerson/Maps/title_screen.title_screen
 GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_GameMode.BP_GameMode_C
 bUseSplitscreen=False
+bOffsetPlayerGamepadIds=True
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_14
