--- a/Saved/Config/WindowsEditor/Game.ini
+++ b/Saved/Config/WindowsEditor/Game.ini
@@ -5,7 +5,7 @@ PerPlatformBuildTarget=()
 Build=IfProjectHasCode
 BuildTarget=
 LaunchOnTarget=
-StagingDirectory=(Path="C:/Users/2002274/Downloads")
+StagingDirectory=(Path="C:/Users/Leo/Downloads")
 ForDistribution=False
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
