--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/ThirdPerson/Maps/title_screen.title_screen
 EditorStartupMap=/Game/ThirdPerson/Maps/title_screen.title_screen
-GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_GameMode.BP_GameMode_C
+GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_MonsterCafeGameMode.BP_MonsterCafeGameMode_C
 bUseSplitscreen=False
 bOffsetPlayerGamepadIds=True
 
