--- a/Saved/Config/WindowsEditor/Game.ini
+++ b/Saved/Config/WindowsEditor/Game.ini
@@ -1,11 +1,11 @@
 [/Script/UnrealEd.ProjectPackagingSettings]
-PerPlatformBuildConfig=(("Windows", PPBC_Shipping))
+PerPlatformBuildConfig=()
 PerPlatformTargetFlavorName=(("Android", "Android_ASTC"))
 PerPlatformBuildTarget=()
 Build=IfProjectHasCode
 BuildTarget=
 LaunchOnTarget=
-StagingDirectory=(Path="C:/Users/Leo/Downloads")
+StagingDirectory=(Path="")
 ForDistribution=False
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
