--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,6 +4,8 @@ EditorStartupMap=/Game/ThirdPerson/Maps/title_screen.title_screen
 GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_MonsterCafeGameMode.BP_MonsterCafeGameMode_C
 bUseSplitscreen=False
 bOffsetPlayerGamepadIds=False
+TransitionMap=/Game/ThirdPerson/Maps/title_screen.title_screen
+ServerDefaultMap=/Game/ThirdPerson/Maps/title_screen.title_screen
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_14
