--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,11 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=368F28FF4B455BEB614D80ACB4B91BED
 ProjectName=Third Person Game Template
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+UsePakFile=False
+bUseIoStore=False
+Build=Always
+IncludePrerequisites=False
+BuildConfiguration=PPBC_Shipping
+
