--- a/Saved/Config/WindowsEditor/Game.ini
+++ b/Saved/Config/WindowsEditor/Game.ini
@@ -1,11 +1,12 @@
 [/Script/UnrealEd.ProjectPackagingSettings]
-PerPlatformBuildConfig=(("Windows", PPBC_Shipping))
+@EngineCustomBuilds=Name
+@ProjectCustomBuilds=Name
+PerPlatformBuildConfig=()
 PerPlatformTargetFlavorName=(("Android", "Android_ASTC"))
 PerPlatformBuildTarget=()
-Build=IfProjectHasCode
 BuildTarget=
 LaunchOnTarget=
-StagingDirectory=(Path="C:/Users/Leo/Downloads")
+StagingDirectory=(Path="C:/Users/keldy/Documents/GitHub")
 ForDistribution=False
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
@@ -28,4 +29,5 @@ ApplocalPrerequisitesDirectory=(Path="")
 LocalizationTargetCatchAllChunkId=0
 bCookAll=False
 bCookMapsOnly=False
+Build=IfProjectHasCode
 
